--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                         <input type="textbox" id="Username" placeholder="Username" name="Username" value="{{Username}}">
                     </div>
                     <div class="flex">
-                        <input type="textbox" id="Password" placeholder="Password" name="Password" value="{{Password}}">
+                        <input type="password" id="Password" placeholder="Password" name="Password" value="">
                     </div>
                     <div class="flex" id="submit_flex">
                         <input type="submit" id="submit" value="Sign In">
