--- a/templates/forgotPassword.html
+++ b/templates/forgotPassword.html
@@ -13,11 +13,14 @@
                     <h1>Recover Password</h1>
                 </div>
                 
-                <form action="{{ url_for('login') }}" method="post" class="login-form">
+                <form action="{{ url_for('forgotPassword') }}" method="post" class="login-form">
                     <div class="flex">
-                        <input type="textbox" id="emailAddress" placeholder="Email Address" name="emailAddress" value="">
+                        <input type="email" id="emailAddress" placeholder="Email Address" name="emailAddress" value="">
                     </div>
-                    
+                    <div class="flex">
+                        <input type="password" id="emailAddress" placeholder="Password" name="password" value="">
+                    </div>
+
                     <div class="flex" id="submit_flex">
                         <input type="submit" id="submit" value="Recover Password">
                     </div>
