--- a/templates/Investments.html
+++ b/templates/Investments.html
@@ -9,10 +9,7 @@
         <h1>Properties</h1>
     </div>
 
-    <!-- <img class="items" src=" {{url_for('static',filename='images/test/test.jpg')}}" alt=""> -->
-
-
-    <div class="flex Carasols_investments">
+    <!-- <div class="flex Carasols_investments">
         <div class="slideshowbox">
 
             <div class="slide-show">
@@ -281,7 +278,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
 </main>
 {% endblock %}
