--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <main>
         <div class="flex hero">
 
-            <a href="{{url_for('investments')}}">
-                <button class="btn_investments">Invest Now</button> <!-- come back and fix this> -->
+            <a href="{{url_for('login')}}">
+                <button class="btn_investments">Invest Now!</button> <!-- come back and fix this> -->
             </a>
         </div>
         
