--- a/templates/Investments.html
+++ b/templates/Investments.html
@@ -9,7 +9,7 @@
         <h1>Properties</h1>
     </div>
 
-    <!-- <div class="flex Carasols_investments">
+    <div class="flex Carasols_investments">
         <div class="slideshowbox">
 
             <div class="slide-show">
@@ -278,7 +278,7 @@
                 </a>
             </div>
         </div>
-    </div> -->
+    </div>
 
 </main>
 {% endblock %}
