--- a/templates/basePage.html
+++ b/templates/basePage.html
@@ -18,7 +18,7 @@
             <h1><a href="{{url_for('index')}}">Fractional CRE</a></h1>
             <nav>
                 <ul class="flex">
-                    <li><a href="{{url_for('login')}}">Investments</a></li> 
+                    <li><a href="{{url_for('investments')}}">Investments</a></li> 
                     <li><a href="{{url_for('researchInsights')}}">Research & Insights</a></li>
                     <li><a href="{{url_for('aboutUs')}}">About Us</a></li> 
                     <li><a href="{{url_for('login')}}">Login</a></li>
@@ -33,7 +33,7 @@
         <h1><a href="{{url_for('index')}}">Fractional CRE</a></h1>
         <nav>
             <ul class="flex">
-                <li><a href="{{url_for('login')}}">Investments</a></li>
+                <li><a href="{{url_for('investments')}}">Investments</a></li>
                 <li><a href="{{url_for('researchInsights')}}">Research & Insights</a></li>
                 <li><a href="{{url_for('aboutUs')}}">About Us</a></li>
                 <li><a href="{{url_for('login')}}">Login</a></li>
