--- a/templates/Investments.html
+++ b/templates/Investments.html
@@ -9,7 +9,7 @@
         <h1>Properties</h1>
     </div>
 
-    <!-- <img src="{{url_for('static',filename='/images/test/test.jpg')}}" alt=""> -->
+    <img src="{{url_for('static',filename='/images/test/test.jpg')}}" alt="">
 
     <!-- <div class="flex Carasols_investments">
         <div class="slideshowbox">
