--- a/templates/basePage.html
+++ b/templates/basePage.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../static/styles/style.css" />
-    <link rel="icon" href="../static/images/favicon/favricon.png">
-    <script src="../static/scripts/scripts.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/style.css')}}" />
+    <link rel="icon" href="{{url_for('static', filename='images/favicon/favricon.png')}}">
+    <script src="{{url_for('static', filename='scripts/scripts.js')}}" defer></script>
+    <script src="{{url_for('static', filename='scripts/scripts_V2_crasols.js')}}" defer></script>
     <title>Fractional CRE {%block title%} {% endblock %}</title>
 </head>
 
