--- a/templates/login.html
+++ b/templates/login.html
@@ -7,22 +7,26 @@
     <main> 
         <div class="flex login-form">
 
-            <div class="flex" id="login-1">
+            <div id="login-1">
 
                 <div class="flex">
                     <h1>Login</h1>
                 </div>
                 
                 <form action="{{ url_for('login') }}" method="post" class="login-form">
+
                     <div class="flex">
                         <input type="textbox" id="Username" placeholder="Username" name="Username" value="{{Username}}">
                     </div>
+
                     <div class="flex">
                         <input type="password" id="Password" placeholder="Password" name="Password" value="">
                     </div>
+                    
                     <div class="flex" id="submit_flex">
                         <input type="submit" id="submit" value="Sign In">
                     </div>
+                
                 </form> 
 
                 <div class="flex">
