--- a/templates/basePage.html
+++ b/templates/basePage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/mobile.css')}}" />
 
     <link rel="icon" href="{{url_for('static', filename='images/favicon/favricon.png')}}">
+    <script src="{{url_for('static', filename='scripts/login.js')}}" defer></script>
     <script src="{{url_for('static', filename='scripts/scripts.js')}}" defer></script>
     <script src="{{url_for('static', filename='scripts/scripts_V2_crasols.js')}}" defer></script>
     <title>Fractional CRE {%block title%} {% endblock %}</title>
