--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,9 @@
             <div class="flex">
                 <h1>Login</h1>
             </div>
-
-            <form action="{{ url_for('login') }}" method="post" class="login-form">
+            
+            <!-- action="{{ url_for('token') }}" method="post"-->
+            <form  class="login-form">
                 <div class="flex">
                     <input type="textbox" id="Username" placeholder="Username" name="Username" value="{{Username}}">
                 </div>
@@ -21,7 +22,8 @@
                     <input type="textbox" id="Password" placeholder="Password" name="Password" value="{{Password}}">
                 </div>
                 <div class="flex" id="submit_flex">
-                    <input type="submit" id="submit" value="Sign In">
+                    <input type="submit" id="submit" value="Sign In"> 
+                    <!-- submit  -->
                 </div>
             </form>
 
