--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -488,5 +488,11 @@ font-size: xx-large;
     z-index: 9;
 }
 
+@media screen and (min-width: 960px) {
 
-/* asset box end */
+    .maxWidth {
+        width: 960px;
+        margin: auto;
+    }
+
+}
